# agentic_sdk

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agentic_framework/: __init__.py  logging_config.py
agentic_framework/core/: __init__.py  agent.py  conversation.py  crew.py  stream_events.py
agentic_framework/core/.ipynb_checkpoints/: agent-checkpoint.py  conversation-checkpoint.py  stream_events-checkpoint.py
agentic_framework/tools/: __init__.py  base.py
